--- a/GoingRogueDesign/GoingRogueDesign/Home.storyboard
+++ b/GoingRogueDesign/GoingRogueDesign/Home.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home-->
+        <!--Welcome To Home Page-->
         <scene sceneID="OPM-yh-Jgk">
             <objects>
                 <viewController storyboardIdentifier="showSignInScreen" id="UMc-dp-fHJ" customClass="HomeViewController" customModule="GoingRogueDesign" customModuleProvider="target" sceneMemberID="viewController">
